--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
     <version>2.13.10</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.8</version>
+</dependency>
+
+
   </dependencies>
 
   <build>
